{
    "name": "FixHorizon360Controls",
    "maps": [
        {
            "name": "PanoControls",
            "id": "c6848147-0f25-484b-b43f-f71458079064",
            "actions": [
                {
                    "name": "Attach/Detach",
                    "type": "Button",
                    "id": "cd3de297-1ccc-4971-925d-600eb016f879",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pitch",
                    "type": "Button",
                    "id": "4e9dab8d-0c88-428b-adec-cd9a6b8a609d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Yaw",
                    "type": "Button",
                    "id": "ded2343f-f770-443c-b2ab-9cebdf0fbb28",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "20b3924c-9b3d-44ab-b503-57e0c030933f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate90CW",
                    "type": "Button",
                    "id": "c575b731-fa00-4856-90a8-a9b78f356628",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate90CCW",
                    "type": "Button",
                    "id": "dcdf7b6c-f4e3-4cfd-b2cc-7936d1fb585a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncrementRotationPositive",
                    "type": "Value",
                    "id": "229513b6-dd25-492c-8459-8b285ab444f7",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "IncrementRotationNegative",
                    "type": "Value",
                    "id": "8d4f3a36-fa48-4bd6-9da7-92d5b53ef990",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ToggleVRGround",
                    "type": "Button",
                    "id": "3f6564d0-852f-4ba7-bddb-fa8764e11a7a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VRRecenter",
                    "type": "Button",
                    "id": "40eea7c5-9cbd-44ef-ae7f-216392547da6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "703260c5-344f-41ab-a558-0d5a0020c257",
                    "path": "<XRController>{RightHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attach/Detach",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17c91f69-6581-4c8d-92de-534c2cf735ec",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attach/Detach",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87df86dc-5409-4da1-a6a9-5490fb343472",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b19b3175-397b-4b7d-80de-aaa46695a727",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ffe2c7e-c437-4fc3-9cc6-fd4f35a496a4",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8869f35-0650-4a4d-8868-459cdb836334",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate90CW",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f4ff578-5292-4059-8466-2a25b5958a0f",
                    "path": "<XRController>{LeftHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate90CW",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f1f09a8-d697-4d07-b0f6-7735552fba36",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate90CCW",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ecbde3d-62eb-463b-be46-78dd5e90b40b",
                    "path": "<XRController>{LeftHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate90CCW",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49f003e4-5c98-4697-bfeb-e0320f242cbb",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncrementRotationPositive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e3e4045-97ae-4562-bebc-7c161e8b345f",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncrementRotationNegative",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1fe07e1-2519-4e5a-ab94-adab12ff514e",
                    "path": "<XRController>{LeftHand}/joystickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleVRGround",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "582151c5-a0ab-4c17-abbc-5272416cec18",
                    "path": "<XRController>{RightHand}/joystickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VRRecenter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}